# POD-RBF

./: .gitignore  404.html  CLAUDE.md  README.md  heatPOD.py  index.html  mkdocs.yml  objects.inv  pod_rbf.py  pyproject.toml  runPOD.py  setup.py  shockPOD.py  sitemap.xml
.github/: codecov.yml
.github/workflows/: create-new-release-on-push  create-new-release-on-push.yml  docs.yml  publish.yml  python-publish.yml  tests.yml
api/: index.html
docs/: examples.md  getting-started.md  index.md
docs/api/: index.md
docs/user-guide/: autodiff.md  inference.md  io.md  training.md
example/: 2d-heat.py  runPOD.py
examples/: 2-parameters.ipynb  index.html  test.py
examples/heat-conduction/: 2d-heat.py  design-optimization.py
examples/lid-driven-cavity/: generatePODdata.sim  lid-driven-cavity.ipynb  lid-driven-cavity.py
examples/lid-driven-cavity/data/train/: re-0001.csv  re-0100.csv  re-0200.csv  re-0300.csv  re-0400.csv  re-0500.csv  re-0600.csv  re-0700.csv  re-0800.csv  re-0900.csv  re-1000.csv
examples/lid-driven-cavity/data/validation/: re-0050.csv  re-0150.csv  re-0450.csv  re-0850.csv
examples/shape-optimization/: optimize_shape.py
getting-started/: index.html
pod_rbf/: __init__.py  core.py  decomposition.py  io.py  kernels.py  pod_rbf.py  rbf.py  shape_optimization.py  types.py
search/: search_index.json
tests/: conftest.py  test_core.py  test_decomposition.py  test_io.py  test_kernels.py  test_rbf.py
user-guide/autodiff/: index.html
user-guide/inference/: index.html
user-guide/io/: index.html
user-guide/training/: index.html
