[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pod_rbf"
dynamic = ["version"]
authors = [{name = "Kyle Beggs", email = "beggskw@gmail.com"}]
description = "JAX-based POD-RBF for autodiff-enabled reduced order modeling."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "jax>=0.4.0",
    "jaxlib>=0.4.0",
    "numpy",
    "tqdm",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/kylebeggs/POD-RBF"
Repository = "https://github.com/kylebeggs/POD-RBF"

[tool.setuptools_scm]
